# caracal

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  release.yml  security.yml
caracal/: __init__.py  __main__.py  config.py
caracal/analysis/: __init__.py  compute.py  entry_points.py
caracal/cli/: __init__.py  analyze.py  configure.py  daemon_cmd.py  entry.py  fetch.py  init.py  tui.py  watchlist.py
caracal/daemon/: __init__.py  ipc.py  registry.py  scheduler.py  service.py
caracal/daemon/tasks/: __init__.py  analysis.py  cleanup.py  fetch.py  news.py
caracal/indicators/: __init__.py  bollinger.py  ema.py  macd.py  rsi.py  sma.py
caracal/news/: __init__.py  protocol.py  reuters.py
caracal/output/: __init__.py  human.py  json.py  precision.py
caracal/providers/: __init__.py  alphavantage.py  eodhd.py  finnhub.py  ibkr.py  massive.py  pipeline.py  types.py  yahoo.py
caracal/storage/: __init__.py  duckdb.py
caracal/storage/migrations/: _001_initial.py  _002_worker_runs.py  _003_news.py  __init__.py
caracal/tui/: __init__.py  data.py  theme.py
caracal/tui/screens/: add_ticker.py  create_watchlist.py  delete_watchlist.py  info.py  remove_ticker.py  stock_detail.py  watchlist.py  watchlist_selector.py
caracal/tui/services/: __init__.py  analysis_service.py  news_service.py  refresh_service.py  watchlist_service.py
caracal/tui/styles/: app.tcss
caracal/tui/widgets/: __init__.py  asset_detail_view.py  footer.py  header.py  news_item.py  side_panel.py  watchlist_panel.py  watchlist_table.py
caracal/tui/workers/: __init__.py  daemon_connection.py
tests/: conftest.py  test_config.py  test_config_providers.py  test_main.py
tests/test_analysis/: test_entry_points.py
tests/test_cli/: conftest.py  test_analyze.py  test_configure.py  test_entry.py  test_fetch.py  test_init.py  test_tui.py  test_version.py  test_watchlist.py
tests/test_daemon/: conftest.py  test_analysis_task.py  test_cleanup_task.py  test_cli_daemon.py  test_fetch_task.py  test_integration.py  test_ipc.py  test_news_task.py  test_registry.py  test_scheduler.py  test_service.py  test_worker_runs.py
tests/test_indicators/: conftest.py  test_bollinger.py  test_ema.py  test_macd.py  test_rsi.py  test_sma.py
tests/test_news/: __init__.py  conftest.py  test_protocol.py  test_reuters.py
tests/test_output/: test_human.py  test_json.py  test_precision.py  test_precision_properties.py
tests/test_providers/: conftest.py  test_alphavantage.py  test_eodhd.py  test_finnhub.py  test_ibkr.py  test_massive.py  test_pipeline.py  test_registry.py  test_ticker_validation.py  test_types.py  test_url_sanitization.py  test_yahoo.py
tests/test_storage/: test_duckdb.py  test_duckdb_news.py  test_migrations.py  test_watchlist.py
tests/test_tui/: test_add_ticker.py  test_analysis_service.py  test_app.py  test_app_layout.py  test_asset_detail_view.py  test_auto_refresh.py  test_create_watchlist.py  test_daemon_connection.py  test_data.py  test_delete_watchlist.py  test_footer.py  test_info_screen.py  test_integration.py  test_news_item_widget.py  test_news_service.py  test_refresh_service.py  test_remove_ticker.py  test_side_panel.py  test_stock_detail_screen.py  test_theme.py  test_watchlist_panel.py  test_watchlist_screen.py  test_watchlist_selector.py  test_watchlist_service.py  test_watchlist_table.py
