[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caracal"
version = "0.1.0"
description = "CLI tool for automated stock analysis"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "yfinance>=0.2",
    "pandas>=2.0",
    "duckdb>=1.0",
]

[project.scripts]
caracal = "caracal.cli:cli"

[tool.setuptools.packages.find]
include = ["caracal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
