[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caracal"
version = "1.1.0"
description = "CLI tool for automated stock analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
    "duckdb>=1.0",
]

[project.urls]
Homepage = "https://github.com/fuchsblau/caracal"
Repository = "https://github.com/fuchsblau/caracal"
Issues = "https://github.com/fuchsblau/caracal/issues"

[project.scripts]
caracal = "caracal.cli:cli"

[tool.setuptools.packages.find]
include = ["caracal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[project.optional-dependencies]
yahoo = ["yfinance>=0.2"]
massive = ["massive>=0.1"]
ibkr = ["ib_async>=2.0"]
all = ["caracal[yahoo]", "caracal[massive]", "caracal[ibkr]"]
dev = [
    "caracal[yahoo]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "bump-my-version>=0.28",
]

[tool.bumpversion]
current_version = "1.1.0"
commit = true
tag = true
commit_message = "chore: bump version {current_version} -> {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "caracal/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
