[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caracal-trading"
version = "1.4.0"
description = "CLI tool for automated stock analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
    "duckdb>=1.0",
    "cronsim>=2.6",
    "feedparser>=6.0",
]

[project.urls]
Homepage = "https://github.com/fuchsblau/caracal"
Repository = "https://github.com/fuchsblau/caracal"
Issues = "https://github.com/fuchsblau/caracal/issues"

[project.scripts]
caracal = "caracal.cli:cli"

[tool.setuptools.packages.find]
include = ["caracal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: fast unit tests (default)",
    "integration: requires external services or network",
    "slow: tests taking more than 1 second",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["caracal"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[project.optional-dependencies]
yahoo = ["yfinance>=0.2"]
massive = ["massive>=0.1"]
ibkr = ["ib_async>=2.0"]
alphavantage = ["requests>=2.28"]
eodhd = ["requests>=2.28"]
finnhub = ["requests>=2.28"]
tui = ["textual>=1.0"]
all = ["caracal-trading[yahoo]", "caracal-trading[massive]", "caracal-trading[ibkr]", "caracal-trading[alphavantage]", "caracal-trading[eodhd]", "caracal-trading[finnhub]", "caracal-trading[tui]"]
dev = [
    "caracal-trading[yahoo]",
    "caracal-trading[tui]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-textual-snapshot>=1.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "bump-my-version>=0.28",
]

[tool.bumpversion]
current_version = "1.4.0"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:\.dev\d+)?'
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
commit_message = "chore: bump version {current_version} -> {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "caracal/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
